--- a/AWS/.package.yaml
+++ b/AWS/.package.yaml
@@ -33,7 +33,7 @@ name: AWS
 main: ''
 mainJob: ''
 license: https://github.com/OpenAF/openaf-opacks/blob/master/LICENSE
-version: '20260126'
+version: '20260204'
 dependencies:
   OpenAF: '>=20250315'
 files:
@@ -65,6 +65,7 @@ files:
 - aws_secrets_sec.js
 - aws_sqs.js
 - aws_sts.js
+- oJobCodeArtifact.yaml
 - oJobECR.yaml
 - oJobLambda.yaml
 - oafp_aws.js
@@ -98,6 +99,7 @@ filesHash:
   aws_secrets_sec.js: c93c3710af91b3c03369c15c6ee9227602e772fc
   aws_sqs.js: 24818b763f14d4e3ab60d8ed0165c7eb89e6d5a0
   aws_sts.js: 3eafbe7d1acba1c3fa7d0b8323455be6e64dec51
+  oJobCodeArtifact.yaml: c43eb7777b55a7556479803a8a6107748a8774ea
   oJobECR.yaml: 0c6afcc8a3997436e9486c5cdcf8d2517ff29b5c
   oJobLambda.yaml: 5335ca9fb6d204160d841f6ddbbd83c69f6010e1
   oafp_aws.js: ceeed9106866b917553b25597e76b14d2bfbce09
