--- a/AWS/oJobCodeArtifact.yaml
+++ b/AWS/oJobCodeArtifact.yaml
@@ -231,7 +231,7 @@ jobs:
         var parts = puri.split("/").filter(r => r.length > 0)
         var reqParams = isMap(request.params) ? request.params : {}
         var reqPage = isDef(reqParams.page) ? Number(reqParams.page) : __
-        var reqPageSize = isDef(reqParams.pageSize) ? Number(reqParams.pageSize) : __
+        var reqPageSize = __
 
         if (parts.length == 0) {
           var domains = $cache("codeartifact-domains").get({})
